--- a/BlogHost.Web/Views/Home/Index.cshtml
+++ b/BlogHost.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         </p>
         @foreach (var t in ViewBag.value)
         {
-            @t.ID @t.Name
+            <p>@t.ID @t.Name</p>
         }
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
