--- a/BlogHost.Web/Views/Blog/_BlogMiniPartial.cshtml
+++ b/BlogHost.Web/Views/Blog/_BlogMiniPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BlogHost.Domain.Entities.Blog
 
 <div class="item">
-    <h3>@Html.ActionLink(Model.Name, "InBlog", "Post", new { blogId = Model.id, blogName = Model.Name }, null)</h3>
+    <h3>@Html.ActionLink(Model.Name, "InBlog", "Post", new { blogid = Model.id, blogname = Model.Name, useremail = Model.User.Email }, null)</h3>
     Owner : @Model.User.Username
 </div>
