--- a/BlogHost.Web/Views/Home/Contact.cshtml
+++ b/BlogHost.Web/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
+
 <h3>@ViewBag.Message</h3>
 
 <address>
@@ -12,5 +12,5 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:alexander.reznik@gmail.com">alexander.reznik@gmail.com</a><br />
+    <strong>Support:</strong>   <a href="mailto:alexander.reznik.01@gmail.com">alexander.reznik.01@gmail.com</a><br />
 </address>
