--- a/BlogHost.Web/Content/bootstrap.css
+++ b/BlogHost.Web/Content/bootstrap.css
@@ -310,6 +310,10 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+red {
+    color: red;
+}
+
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
