--- a/BlogHost.Web/Views/Admin/Index.cshtml
+++ b/BlogHost.Web/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Moderate";
 }
 
-@Html.ActionLink("Posts", "Posts");
-@Html.ActionLink("Comments", "Comments");
-@Html.ActionLink("Users", "Users");
+@Html.ActionLink("Posts", "Posts")
+<br/>
+@Html.ActionLink("Comments", "Comments")
 
